# ChompApi

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
ChompAPI/: CMakeLists.txt  ChompFramework.cpp  ChompFramework.h
ChompAPI/models/: REPOplayer.fbx
ChompAPI/objects/: Cube.cpp  OBJLoader.h  Pyramid.cpp  Pyramid.h  Renderer.h  Shape.h  Skybox.cpp  Skybox.h  Types.h
ChompAPI/window/: Window.cpp  Window.h
ChompFramework/: CMakeLists.txt  ChompFramework.cpp
ChompFramework/objects/: Cube.cpp  Cube.h
ChompFramework/window/: Window.cpp
